[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/Eis_queleto_with_sword_v2-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/skeleton.gd" type="Script" id=2]
[ext_resource path="res://scripts/weak_spot.gd" type="Script" id=3]
[ext_resource path="res://scenes/barradevida_inimigo.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "attack_left"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_right"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 13.8343, 22.5844 )

[node name="skeleton" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 0 )
texture = ExtResource( 1 )
offset = Vector2( -14.7043, -4.91973 )
flip_h = true
vframes = 2
hframes = 13
frame = 17

[node name="weak_spot" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="weak_spot"]
polygon = PoolVector2Array( -16.7193, -20.0893, 10.9814, -19.7019, 9.81916, 23.8832, -15.9444, 23.4958 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/attack_left = SubResource( 1 )
anims/attack_right = SubResource( 2 )
anims/walk_left = SubResource( 3 )
anims/walk_right = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.47115, 1.51966 )
shape = SubResource( 5 )

[node name="barradevida_inimigo" parent="." instance=ExtResource( 4 )]
margin_left = -17.0
margin_top = -25.0
margin_right = 10.0
margin_bottom = -22.0
color = Color( 0.384314, 0.172549, 0.172549, 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3

[node name="esquerda" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -18.1309, -4.64038, -18.5992, 18.2525, -30.9364, 19.4091, -33.5066, 5.0157 )
disabled = true

[node name="direita" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 12.5008, -2.05248, 12.5008, 16.7103, 27.7938, 19.4091, 27.4082, 3.08802 )
disabled = true

[node name="attack" type="Timer" parent="."]
wait_time = 4.0
autostart = true
[connection signal="damage" from="weak_spot" to="." method="_on_weak_spot_damage"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
